--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ p {
   max-width: 1100px;
   display: flex;
   flex-wrap: wrap;
-  gap: 10px ;
+  gap: 10px;
   width: 737px;
 }
 
@@ -41,7 +41,6 @@ p {
 }
 
 .card {
-
   background: #ffffff;
   width: 200px;
   height: 300px;
@@ -56,10 +55,9 @@ p {
   margin-bottom: 10px;
 }
 
-.card_descr h3  {
+.card_descr h3 {
   margin-left: 20px;
 }
-
 
 .card_girls {
   background: #ffffff;
@@ -76,10 +74,9 @@ p {
   margin-bottom: 10px;
 }
 
-.guide h3  {
+.guide h3 {
   margin-left: 20px;
 }
-
 
 .card_feet {
   background: #ffffff;
@@ -91,11 +88,10 @@ p {
   margin-top: 10px;
 }
 
-.growth h3  {
+.growth h3 {
   margin-top: 35px;
   margin-left: 20px;
 }
-
 
 .card_car {
   background: #ffffff;
@@ -112,7 +108,7 @@ p {
   margin-bottom: 10px;
 }
 
-.course h3  {
+.course h3 {
   margin-left: 20px;
 }
 
@@ -121,3 +117,22 @@ p {
   padding-top: 20px;
 }
 
+.loading {
+  padding-top: 30px;
+  padding-left: 250px;
+  text-transform: uppercase;
+}
+
+.loading i {
+  font-size: 18px;
+  animation: spin 3s linear infinite;
+}
+@keyframes spin {
+  0% {
+  transform: rotate(0deg);
+  }
+
+  100% {
+  transform: rotate(359deg);
+ }
+}
